@@ -1,3 +1,9 @@
+2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCicode.c,
+	  src/SDCCopt.c:
+	  Debug message cleanup, reenable address space splitting.
+
 2011-11-14 Raphael Neider <rneider AT web.de>
 
 	* device/include/pic14/pic14devices.txt,
